--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost/blog
+MONGO_URL=mongodb+srv://Lakshan2000:Lcp@0503@lakshanijse.kszyrgp.mongodb.net/?retryWrites=true&w=majority
 SECRET=ijserad
